# AXS

./: README.md
docs/logo/: AXSAutomation_2022-Nov-20_09-20-47AM_CustomizedView16469127577_strip.html
projects/Arduino/ESP32/: BLE-device-sort-20201223.aix
projects/ClubCar_TDisplay/: wallpaper_axs_logo.c
projects/ClubCar_TDisplay/ClubCar_TDisplay_v1/: ClubCar_TDisplay_v1.ino
projects/ClubCar_TDisplay/ClubCar_TDisplay_v2/: ClubCar_TDisplay_v2.ino
projects/ClubCar_TDisplay/ClubCar_TDisplay_v3/: credentials.h  wallpaper.h
projects/ESP32-C3/0TA_Template/: 0TA_Template.ino
projects/ESP32-C3/0TA_Template_ESP32C3/: 0TA_Template_ESP32C3.ino
projects/ESP32-S3/BLE_ESP32-S3_v1/: BLE_ESP32-S3_v1.ino
projects/ESP32-S3/BrandysBirdhouseS3/: BrandysBirdhouseS3.ino
projects/ESP32-S3/ClubCar_TDisplay/: wallpaper_axs_logo_transparentBG.c
projects/ESP32-S3/ESP32S3_BLE-HardwareSPI_SDWebServer/: Core0.h  ESP32S3_BLE-HardwareSPI_SDWebServer.ino
projects/ESP32-S3/ESP32S3_BLE-HardwareSPI_SDWebServer_2/: Core0.h  ESP32S3_BLE-HardwareSPI_SDWebServer_2.ino
projects/ESP32_ObjectAvoidanceTank/: ESP32_ObjectAvoidanceTank.ino
projects/MowBot/: .bashrc
projects/_ROS2/: mowbot_pkg_setup_guide (1).md
projects/_ROS2/mowbot_v2/: package.xml
projects/_ROS2/mowbot_v2/install/: setup.ps1  setup.zsh
projects/_ROS2/mowbot_v2/install/mowbot_pkg/lib/mowbot_pkg/: roboclaw_control
projects/_ROS2/mowbot_v2/install/mowbot_pkg/share/mowbot_pkg/: package.dsv  package.sh
projects/_ROS2/mowbot_v2/mowbot_pkg/: object_avoidance.py
projects/simAImodeltrainer/: myconfig.py  unitylog.txt
(+383 files in other folders)
